# sqlite-cdc

./: .gitignore  CLAUDE.md  Makefile  README.md  appveyor.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci-windows-build-deploy.yml  ci.yml
.specify/memory/: constitution.md
docs/: API.md  quickstart.md
example/mysql/: consumer.py  producer.py
specs/: data-model.md  initial-sync.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/checklists/: requirements.md
src/sqlite_cdc/: __init__.py  config.py
src/sqlite_cdc/cli/: __init__.py  main.py
src/sqlite_cdc/core/: __init__.py  audit_reader.py  connection.py  engine.py  initial_sync.py
src/sqlite_cdc/models/: __init__.py  audit.py  event.py  position.py  sync_config.py
src/sqlite_cdc/storage/: __init__.py  checkpoint.py
src/sqlite_cdc/targets/: __init__.py  base.py  mysql_writer.py  oracle_writer.py
src/sqlite_cdc/utils/: __init__.py  converters.py  logging.py  notifier.py  sql_parser.py  transformer.py
tests/: __init__.py  conftest.py
tests/integration/: test_cdc_flow.py  test_sync_engine.py
tests/unit/: test_connection.py  test_converters.py  test_models.py  test_sql_parser.py
