[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlite-cdc"
version = "0.1.0"
description = "SQLite CDC 同步引擎 - 支持存量和增量同步到 MySQL/Oracle"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "WingC"}
]
keywords = ["sqlite", "cdc", "sync", "mysql", "oracle", "replication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "SQLAlchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "oracledb>=1.4.0",
    "structlog>=23.0.0",
    "click>=8.1.0",
    "sqlparse>=0.4.4",
    "pyyaml>=6.0.1",
    "asyncio-mqtt>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "types-pyyaml>=6.0.12",
    "testcontainers>=3.7.0",
    "coverage>=7.4.0",
]

[project.scripts]
sqlite-cdc = "sqlite_cdc.cli.main:cli"

[project.urls]
Homepage = "https://github.com/WingsGo/sqlite-cdc"
Documentation = "https://github.com/WingsGo/sqlite-cdc/docs"
Repository = "https://github.com/WingsGo/sqlite-cdc"
Issues = "https://github.com/WingsGo/sqlite-cdc/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlite_cdc"]

[tool.unittest]
plugins = ["asyncio"]

[tool.coverage.run]
source = ["src/sqlite_cdc"]
omit = [
    "*/tests/*",
    "*/test_*",
    "sqlite_cdc/cli/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src/sqlite_cdc"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = [
    "aiomysql.*",
    "oracledb.*",
    "sqlparse.*",
    "testcontainers.*",
]
ignore_missing_imports = true
